--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set name = "ChemDataExtractor" %}
 {% set version = "1.3.0" %}
-{% set sha256 = "2c989cfb60048dc57a49472228381574bff351c31896bdcd621991f68c0f9cc9" %}
 
 package:
   name: {{ name|lower }}
@@ -8,12 +7,12 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  sha256: 2c989cfb60048dc57a49472228381574bff351c31896bdcd621991f68c0f9cc9
 
 build:
   noarch: python
-  number: 0
-  script: python -m pip install --no-deps --ignore-installed .
+  number: 1
+  script: "{{ PYTHON }} -m pip install . -vv"
   entry_points:
     - cde = chemdataextractor.cli:cli
 
@@ -56,7 +55,7 @@ about:
   license: MIT
   license_family: MIT
   license_file: LICENSE
-  summary: 'Automatically extract chemical information from scientific documents.'
+  summary: Automatically extract chemical information from scientific documents.
   doc_url: http://chemdataextractor.org/docs
   dev_url: https://github.com/mcs07/ChemDataExtractor
 
